Removed SmallCar and added Magnitude to ensure something small can't transport something large.